--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,32 @@ body {
 	background-color: lightblue;
 	}
 
-	img:nth-of-type(1){
-		float: right;
+	h1{
+		text-align: center;
+		border:solid;
+		border-radius:50px;
+		border-color: black;
 	}
 
-	p{
-		outline-color: red;
+	h2{
+		text-align: center;
+		margin-top:50px;
+	}
+
+	img:nth-of-type(1){
+		margin-left:600px;
+	}
+
+	p:nth-of-type(1){
+		text-align: center;
+		margin-top:50px;
+		margin-bottom: 50px;
+		font-size:23px; 
+		
+
+	}
+
+	p:nth-of-type(2){
+		text-align: center;
+		font-size:20px;
 	}
