--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,9 @@ body {
 	}
 
 	img:nth-of-type(1){
-		margin-left:600px;
+		margin-left:670px;
+		height: 180px;
+		width: 140px;
 	}
 
 	p:nth-of-type(1){
